# celery-async-threadpool

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: pytest.yml
src/celery_async_threadpool/: __init__.py  pool.py
tests/: celery_app.py  test_basics.py
