[project]
name = "celery-async-threadpool"
version = "0.1.0"
description = "AsyncIO-aware Thread-based Celery TaskPool"
authors = [
    {name = "Wes Payne", email = "noblepayne@noblepayne.com"},
]
dependencies = [
    "celery>=5.3.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.20.0",
    "ruff>=0.1.13",
    "sqlalchemy>=2.0.25",
    "pytest>=7.4.4",
]
